layout/painting/nsImageRenderer.cpp
@@ -572,9 +572,12 @@ ImgDrawResult nsImageRenderer::BuildWebRenderDisplayItems(
         containerFlags |= imgIContainer::FLAG_SYNC_DECODE;
       }
 
-      CSSIntSize imageSize(nsPresContext::AppUnitsToIntCSSPixels(mSize.width),
-                           nsPresContext::AppUnitsToIntCSSPixels(mSize.height));
-      Maybe<SVGImageContext> svgContext(Some(SVGImageContext(Some(imageSize))));
+      CSSIntSize destCSSSize{
+          nsPresContext::AppUnitsToIntCSSPixels(aDest.width),
+          nsPresContext::AppUnitsToIntCSSPixels(aDest.height)};
+
+      Maybe<SVGImageContext> svgContext(
+          Some(SVGImageContext(Some(destCSSSize))));
 
       const int32_t appUnitsPerDevPixel =
           mForFrame->PresContext()->AppUnitsPerDevPixel();
